# AOS

./: .gitmodules  LICENSE.md  README.md  index.py  pyproject.toml  requirements.txt
SweetPea to English/: gpt3.py  gpt3prompt_counterbalancing.txt  gpt3prompt_derived_factors.txt  gpt3prompt_regular_factors.txt  translator.py  unextracted_code.py
SweetPea to English/promt_scrambling/: altered_text_prompts.txt  counterbalancing_scrambled.txt  derived_scrambled.txt  prompt_scrambling.py  promt_scrambling.py  regular_scrambled.txt  test.py  util.py
SweetPea to English/src/: extract.py  store_prompts.py  translate.py
SweetPea to English/test/: 3e59ef36-02ea-495a-9e35-eb7265389787.cnf  code_1.py  text_1.py  text_1.txt  text_2.py  text_2.txt  text_3.py  text_4.txt
flask/templates/: base.html  index.html  jsPsych.html  loading.html  login.html  resources.html  signup.html  sweetPea.html  team.html
flaskapp/: email.py  forms.py  models.py  translator_bp.py
flaskapp/templates/: base.html  email.html  experiment.html  forgot.html  jsPsych.html  loading.html  login.html  resend.html  reset.html  resources.html  signup.html  sourPea.html  sweetPea.html  team.html
instance/: database.db
sweetPeaEnglishTranslator/: .env  README.md  code_unformatted_temp.py  gpt3.py  main.py  myConfig.py  sbet.py  spet.py  text_temp.py  unextracted_code.py
sweetPeaEnglishTranslator/sweetPeaOdities/: test.py  test_0.csv
sweetPeaEnglishTranslator/temp/: exp_tmp.py
sweetPeaEnglishTranslator/test/: code 1.py  code_2.py  code_3.py  code_unformatted_1.py  (+9 more)
tests/: test_autoos.py
(+135 files in other folders)
